--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "test": "ng test",
     "postinstall": "prettier --check . || npm run format",
     "format": "prettier --write \"*.{json,md}\" \"src/**/*.{ts,html,scss,css,json,md}\"",
-    "format:check": "prettier --check \"*.{json,md}\" \"src/**/*.{ts,html,scss,css,json,md}\""
+    "format:check": "prettier --check \"*.{json,md}\" \"src/**/*.{ts,html,scss,css,json,md}\"",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,html}": [
+      "npm run format"
+    ]
   },
   "private": true,
   "dependencies": {
@@ -36,6 +42,7 @@
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.23",
+    "husky": "^9.1.7",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
