--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "postinstall": "prettier --check . || npm run format",
     "format": "prettier --write \"*.{json,md}\" \"src/**/*.{ts,html,scss,css,json,md}\"",
     "format:check": "prettier --check \"*.{json,md}\" \"src/**/*.{ts,html,scss,css,json,md}\"",
-    "prepare": "husky"
+    "prepare": "husky",
+    "lint": "ng lint"
   },
   "lint-staged": {
     "*.{ts,html}": [
+      "eslint --fix",
       "npm run format"
     ]
   },
@@ -41,7 +43,9 @@
     "@angular/cli": "^19.1.5",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "21.0.1",
     "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.1",
     "husky": "^9.1.7",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
@@ -49,8 +53,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "typescript-eslint": "8.46.4"
   }
 }
