--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,11 @@
 {
-  "semi": true,
   "singleQuote": true,
+  "semi": true,
   "printWidth": 100,
   "trailingComma": "all",
   "tabWidth": 2,
   "bracketSpacing": true,
   "arrowParens": "always",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
