--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "lint-staged": {
     "*.{ts,html}": [
-      "eslint --fix",
-      "npm run format"
+      "npm run format",
+      "eslint --fix"
     ]
   },
   "private": true,
@@ -30,7 +30,6 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@primeng/themes": "^19.1.4",
-    "prettier": "^3.7.4",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
@@ -55,6 +54,8 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^16.2.7",
     "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^3.4.19",
     "typescript": "~5.7.2",
     "typescript-eslint": "8.46.4"
