--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css"],
+            "styles": ["src/styles.css", "node_modules/primeicons/primeicons.css"],
             "scripts": []
           },
           "configurations": {
@@ -89,7 +89,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css"],
+            "styles": ["src/styles.css", "node_modules/primeicons/primeicons.css"],
             "scripts": []
           }
         },
